Update while loop condition

--- a/week1/lab0.ipynb
+++ b/week1/lab0.ipynb
@@ -74,41 +74,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
-    "Exercise 2\n",
-    "'''\n",
-    "\n",
     "import random\n",
     "import numpy as np\n",
+    "\n",
+    "guess = 0 \n",
+    "randomNumber = random.randrange( 1, 21 )\n",
     "\n",
     "print( 'I have selected a random number between 1 and 20 inclusive. Guess my number.' )\n",
     "\n",
     "# The while loop, if, and elif conditions are incorrect. Replace True with the correct\n",
     "# relational expressions. \n",
-    "while True:\n",
-    "    randomNumber = random.randrange( 1, 21 )\n",
+    "while guess != randomNumber:\n",
+    "    # randomNumber = random.randrange( 1, 21 )\n",
     "    guess = int( input( 'What is your guess? ' ) )\n",
     "\n",
     "    if guess == randomNumber:\n",
     "        print( 'You are correct!' )\n",
     "    elif guess > randomNumber:\n",
-    "        if guess is not np.arange(1,21):\n",
-    "            print(f\"{guess} is outside of the range. Try a different number next time!\")\n",
+    "        if guess not in np.arange(1,21):\n",
+    "            print(f\"{guess} is outside of the range. Try a different number between 1 and 20!\")\n",
     "        else:\n",
     "            print( 'Incorrect -- your guess is too high.' )\n",
     "    elif guess < randomNumber:\n",
-    "        if guess is not np.arange(1,21):\n",
-    "            print(f\"{guess} is outside of the range. Try a different number next time!\")\n",
+    "        if guess not in np.arange(1,21):\n",
+    "            print(f\"{guess} is outside of the range. Try a different number between 1 and 20!\")\n",
     "        else:\n",
     "            print( 'Incorrect -- your guess is too low.' )\n",
     "    else:\n",
     "        print(\"Hmm... I don't understand this input. Try again!\")\n",
-    "        \n",
     "    \n",
     "    print( 'Game over!' )\n",
-    "    print(f\"The number was {randomNumber}\")\n",
-    "    print( '###############' )\n",
-    "    print( 'Restarting game' )"
+    "    print( '###############' )"
    ]
   },
   {
