--- a/week1/lab0.ipynb
+++ b/week1/lab0.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Eri Osya\n",
+    "# Eri Osta\n",
     "# ads829\n",
     "# DS 5023/4023 - Lab 0"
    ]
