--- a/module1/lab1b.ipynb
+++ b/module1/lab1b.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Firstname Lastname\n",
-    "# abc123"
+    "# Eri Osta\n",
+    "# ads829"
    ]
   },
   {
@@ -46,7 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import math\n",
+    "from math import sqrt\n",
     "\n",
     "def getAverage( mylist ):\n",
     "    \"\"\"\n",
@@ -62,10 +62,9 @@
     "    float\n",
     "        The average of the integers in the list\n",
     "    \"\"\"\n",
+    "    return sum(mylist)/len(mylist)\n",
     "\n",
-    "    pass\n",
-    "\n",
-    "def getStandardDeviation( mylist, average ):\n",
+    "def getStandardDeviation( mylist ):\n",
     "    \"\"\"\n",
     "    This function computes the standard deviation in a list of numbers. It is assumed\n",
     "    that you will have already called the getAverage function prior to calling this \n",
@@ -84,7 +83,10 @@
     "    float\n",
     "        The standard deviation of the integers in the list.\n",
     "    \"\"\"\n",
-    "    pass\n",
+    "    tmp=[]\n",
+    "    for i in mylist:\n",
+    "        tmp.append((i - getAverage(mylist))**2)\n",
+    "    return sqrt( sum(tmp) / (len(mylist) - 1) )\n",
     "\n",
     "def getResults( data_list, stat_results ):\n",
     "    \"\"\"\n",
@@ -106,14 +108,23 @@
     "    -------\n",
     "    None\n",
     "    \"\"\"\n",
-    "    pass"
+    "    for ls in data_list:\n",
+    "        stat_results.append([getAverage(ls), getStandardDeviation(ls)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[5.75, 1.5], [7.0, 5.0], [3.0, 0.0]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Sample test code \n",
     "values = [ [ 5, 7, 4, 7 ], [ 12, 2, 7 ], [ 3, 3, 3, 3 ] ]\n",
@@ -129,7 +140,7 @@
  "metadata": {
   "celltoolbar": "Create Assignment",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -143,7 +154,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.10.8"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "42b2f54048e729699c212decb235f393fd0cdb8b24a5008a47c48e8faa6a3c0d"
+   }
   }
  },
  "nbformat": 4,
