--- a/module1/lab1c.ipynb
+++ b/module1/lab1c.ipynb
@@ -232,7 +232,8 @@
    "source": [
     "### Answers\n",
     "\n",
-    "1. "
+    "1. Banker, because it has more opportunities to roll again (i.e., it can roll 1, 2, or 3) compared to Player with just two opportunities (i.e., it can roll 1 or 2) to roll again.\n",
+    "2. If the threshold is lowered, the chance of winning decreases; if the threshold is increased, the chance of winning increases."
    ]
   }
  ],
