--- a/module2/lab2a.ipynb
+++ b/module2/lab2a.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Firstname Lastname\n",
-    "# abc123"
+    "# Eri Osta\n",
+    "# ads829"
    ]
   },
   {
@@ -184,7 +184,6 @@
    "metadata": {},
    "source": [
     "### Answers\n",
-    "\n",
     "1. On May 01, 2020; approx. USD 301\n",
     "2. Between May 18-20, 2020; approx. USD 397\n",
     "3. MRNA--vaccine development during COVID-19 pandemic peak in 2020. "
@@ -234,7 +233,7 @@
     "cost_buy = sum(cost_buy)\n",
     "cost_sell = sum(cost_sell)\n",
     "print(\"## BUY ## Approximate USD:\",cost_buy)\n",
-    "print(\"## SELL ## Approximate USD:\",cost_sell)\n"
+    "print(\"## SELL ## Approximate USD:\",cost_sell)"
    ]
   }
  ],
@@ -254,7 +253,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.8 | packaged by conda-forge | (main, Nov 24 2022, 14:07:00) [MSC v.1916 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
