--- a/module3/lab3.ipynb
+++ b/module3/lab3.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,19 +55,205 @@
     "#  1 mile = 1.60934 kilometers\n",
     "#  Convert Fahrenheit F to Celsius C = (F − 32) × 5/9\n",
     "\n",
-    "\n",
+    "import numpy as np\n",
     "import re\n",
+    "import math\n",
+    "import pandas as pd \n",
+    "\n",
+    "def round_to_n_sig_figs(x, n):\n",
+    "    \"\"\"\n",
+    "    Round a number `x` to `n` significant figures.\n",
+    "\n",
+    "    Args:\n",
+    "        x (float): A number to round.\n",
+    "        n (int): The number of significant figures to round `x` to.\n",
+    "\n",
+    "    Returns:\n",
+    "        float: `x` rounded to `n` significant figures.\n",
+    "    \"\"\"\n",
+    "    if x == 0:\n",
+    "        return 0\n",
+    "    return round(x, -int(math.floor(math.log10(abs(x))) - (n - 1)))\n",
+    "\n",
+    "def count_sig_figs(num):\n",
+    "    \"\"\"\n",
+    "    Count the number of significant figures in a number.\n",
+    "\n",
+    "    Args:\n",
+    "        num (float or int): The number to count the significant figures of.\n",
+    "\n",
+    "    Returns:\n",
+    "        int: The number of significant figures in `num`.\n",
+    "    \"\"\"\n",
+    "    num_str = str(num)\n",
+    "    stripped = num_str.lstrip('+-0').rstrip('0').rstrip('.')\n",
+    "    return len(stripped)\n",
+    "\n",
+    "def toCelsius(pattern_found):\n",
+    "    \"\"\"\n",
+    "    Convert a temperature in Fahrenheit to Celsius.\n",
+    "\n",
+    "    Args:\n",
+    "        pattern_found (string): A string representing a temperature in Fahrenheit.\n",
+    "\n",
+    "    Returns:\n",
+    "        float: The temperature in Celsius equivalent to the input temperature in Fahrenheit.\n",
+    "    \"\"\"\n",
+    "    f = float(pattern_found)\n",
+    "    to_magnitude = round((f-32)*5/9,2)\n",
+    "    return to_magnitude\n",
+    "\n",
+    "def extract_number_before_word(string, word):\n",
+    "    pattern = r'([-+]?[0-9]*\\.?[0-9]+([eE][-+]?[0-9]+)?)(?=\\s' + word + r')'\n",
+    "    match = re.search(pattern, string)\n",
+    "    if match:\n",
+    "        return match.group(1)\n",
+    "    else:\n",
+    "        pass\n",
+    "\n",
     "\n",
     "def convertString( sentence ):\n",
-    "    # Your code starts here\n",
-    "    pass"
+    "    \"\"\"\n",
+    "    Convert units of measurements from Imperial units to the metric system.\n",
+    "\n",
+    "    Args:\n",
+    "        sentence (str): A string containing measurements in the format \"[number] [unit of measurement]\".\n",
+    "\n",
+    "    Returns:\n",
+    "        str: A string containing conversions in the format \"[number] [unit of measurement]\".\n",
+    "    \"\"\"\n",
+    "    f = 0\n",
+    "    c = 0\n",
+    "    pattern = ''\n",
+    "    to_unit = ''\n",
+    "    to_magnitude = 1\n",
+    "    old_words = ''\n",
+    "    new_words = ''\n",
+    "    pattern_found = ''\n",
+    "    new_sentence = {}\n",
+    "    \n",
+    "    conversions = {\n",
+    "    ('inch','centimeters') : (1,2.54),\n",
+    "    ('inches','centimeters') : (1,2.54),\n",
+    "    ('foot','meters') : (1,0.3048),\n",
+    "    ('feet','meters') : (1,0.3048),\n",
+    "    ('yard','meters') : (1,0.9144),\n",
+    "    ('yards','meters') : (1,0.9144),\n",
+    "    ('mile','kilometers') : (1,1.60934),\n",
+    "    ('miles','kilometers') : (1,1.60934),\n",
+    "    ('Fahrenheit','°C') : (f,c),\n",
+    "    ('°F','°C') : (f,c)\n",
+    "\n",
+    "    }\n",
+    "    \n",
+    "    keys=[]\n",
+    "    \n",
+    "    for k in conversions.keys():\n",
+    "        keys.append(k[0])\n",
+    "    \n",
+    "    for key in keys:\n",
+    "\n",
+    "        if key in sentence:\n",
+    "        \n",
+    "            for k,v in conversions.items():\n",
+    "\n",
+    "                if k[0] in sentence:\n",
+    "                    word = k[0]\n",
+    "                    to_unit = k[1]\n",
+    "                    to_magnitude = v[1]\n",
+    "                    \n",
+    "                    pattern_found = extract_number_before_word(sentence, word)\n",
+    "                                                    \n",
+    "                    old_words = str(pattern_found) + ' ' + word\n",
+    "                    \n",
+    "                    if  word == '°F':\n",
+    "                        product = toCelsius(pattern_found)\n",
+    "                        product = round_to_n_sig_figs(product,\n",
+    "                                        n=count_sig_figs(float(pattern_found)))\n",
+    "                    \n",
+    "                    else:\n",
+    "                        product = float(pattern_found) * to_magnitude\n",
+    "                            \n",
+    "                        product = round_to_n_sig_figs(product,\n",
+    "                                        n=count_sig_figs(float(pattern_found)))\n",
+    "                            \n",
+    "                    new_words = str(product) + ' ' + to_unit \n",
+    "                                    \n",
+    "                    if new_words not in new_sentence.keys():\n",
+    "                        new_sentence[new_words] = old_words\n",
+    "                                                \n",
+    "            for new_words,old_words in new_sentence.items():\n",
+    "                if old_words in sentence:\n",
+    "                    sentence = re.sub(old_words,new_words,sentence)\n",
+    "                    \n",
+    "            return sentence\n",
+    "\n",
+    "def tabulateString( sentence ):\n",
+    "    \"\"\"\n",
+    "    This function takes a string as input, looks for recognized units of measurement within the string,\n",
+    "    and outputs a table with the recognized units and their conversions.\n",
+    "    \n",
+    "    Args:\n",
+    "        sentence (str): A string containing units of measurement to be recognized.\n",
+    "    \n",
+    "    Returns:\n",
+    "        None. The function outputs a table using the pandas library.\n",
+    "    \"\"\"\n",
+    "    f = 0\n",
+    "    c = 0\n",
+    "    \n",
+    "    conversions = {\n",
+    "\n",
+    "    ('feet','meters') : (1,0.3048),\n",
+    "    ('miles','kilometers') : (1,1.60934),\n",
+    "    ('°F','°C') : (f,c)\n",
+    "\n",
+    "    }\n",
+    "    \n",
+    "    keys=[]\n",
+    "    data=[]\n",
+    "    for k in conversions.keys():\n",
+    "        keys.append(k[0])\n",
+    "    \n",
+    "    for key in keys:\n",
+    "\n",
+    "        if key in sentence:\n",
+    "        \n",
+    "            for k,v in conversions.items():\n",
+    "\n",
+    "                if k[0] in sentence:\n",
+    "                    from_unit = k[0]\n",
+    "                    from_magnitude = v[0]\n",
+    "                    \n",
+    "                    to_unit = k[1]\n",
+    "                    to_magnitude = v[1]\n",
+    "                    \n",
+    "                    data.append([from_unit,to_unit])\n",
+    "            print(pd.DataFrame(data,columns=['From','To']))\n",
+    "            break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.3 meters.\n",
+      "This pencil was 7.11 centimeterses long, but the tape measure is 23.0 meterss.\n",
+      "In the US the Covid rules were to keep a distance of 2.0 meters. In Europe it was 1.5 meters.\n",
+      "I walked 42.0 kilometerss and 122.0 meters to school each day. At a temperature of -1.1 °C that was no fun.\n",
+      "    From          To\n",
+      "0   feet      meters\n",
+      "1  miles  kilometers\n",
+      "2     °F          °C\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "# Here are some test cases with expected output\n",
     "print( convertString( '1 foot.' ) ) #0.3 meters\n",
@@ -76,6 +262,7 @@
     "\n",
     "# Test for 3. task\n",
     "print( convertString( 'I walked 26 miles and 400 feet to school each day. At a temperature of 30 °F that was no fun.' ) )\n",
+    "print( tabulateString( 'I walked 26 miles and 400 feet to school each day. At a temperature of 30 °F that was no fun.') )\n",
     "\n"
    ]
   }
@@ -83,7 +270,7 @@
  "metadata": {
   "celltoolbar": "Create Assignment",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -97,7 +284,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "d7250ba5b97b808d0ececbdd90a281a33e790958a49511a1d0eeb50f15772f8f"
+   }
   }
  },
  "nbformat": 4,
